# rust_cli_timer

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODOS.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: builds.yml  release.yml
scripts/: bump-version.sh
src/: main.rs
